--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <header>
         <!-- Task: Create a compelling header for the application -->
-        Recipe Finder
+        <h1>Recipe Finder</h1> 
+        <p>Find delicious Recipes based on the ingredients you have!!!</p>
     </header>
     <main>
         <section class="search-section">
             <!-- Task: Set up the search input and button -->
+            <input type="text" id="ingredientInput" placeholder="Enter ingredients...">
+            <button id="searchButton">Search</button>
         </section>
         <section id="results" class="results-section">
             <!-- Recipes will be displayed here by your script -->
@@ -21,6 +24,7 @@
     </main>
     <footer>
         <!-- Task: Implement a footer with your name and the year -->
+        <p>Created by Franklin Simpson &copy; 2024</p>
     </footer>
     <script src="app.js"></script>
 </body>
