--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
     </header>
     <main>
         <section class="search-section">
-            <!-- Task: Set up the search input and button -->
+            <div>
+                <label for="search"></label>
+                <input id='search' type="text" class='search-input'>
+            </div>
+            <button class='search-btn'>Search</button>
         </section>
         <section id="results" class="results-section">
             <!-- Recipes will be displayed here by your script -->
         </section>
     </main>
     <footer>
-        <!-- Task: Implement a footer with your name and the year -->
+        Jay Yong - 2024
     </footer>
     <script src="app.js"></script>
 </body>
 </html>
+
