added search functionality including not being case sesitive

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <header>
-        <!-- Task: Create a compelling header for the application -->
         Recipe Finder
     </header>
     <main>
         <section class="search-section">
-            <!-- Task: Set up the search input and button -->
+            <input type="text" id="ingredientInput" placeholder="Enter ingredients...">
+            <button id="searchButton">Search</button>
         </section>
         <section id="results" class="results-section">
             <!-- Recipes will be displayed here by your script -->
         </section>
     </main>
     <footer>
-        <!-- Task: Implement a footer with your name and the year -->
+        &copy; Pablo Rivera 2024
     </footer>
     <script src="app.js"></script>
 </body>
 </html>
+
