--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <style>
+        .recipe-item {
+          margin-bottom: 20px;
+          border: 1px solid #ccc;
+          padding: 10px;
+          border-radius: 5px;
+        }
+      </style>
     <header>
-        <!-- Task: Create a compelling header for the application -->
-        Recipe Finder
+        <h1>Discover Delicious Recipes</h1>
+        <p>Find amazing recipes based on your ingredients!</p>
     </header>
     <main>
         <section class="search-section">
-            <!-- Task: Set up the search input and button -->
+            <input type="text" id="searchInput" placeholder="Enter ingredients...">
+            <button id="searchBtn">Search</button>
         </section>
         <section id="results" class="results-section">
             <!-- Recipes will be displayed here by your script -->
         </section>
     </main>
     <footer>
-        <!-- Task: Implement a footer with your name and the year -->
+        <p>&copy; Chance Pham | 2024</p>
     </footer>
+    
     <script src="app.js"></script>
 </body>
 </html>
