--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+
     <title>Recipe Finder</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header>
-        <!-- Task: Create a compelling header for the application -->
-        Recipe Finder
-    </header>
-    <main>
-        <section class="search-section">
-            <!-- Task: Set up the search input and button -->
-        </section>
-        <section id="results" class="results-section">
-            <!-- Recipes will be displayed here by your script -->
-        </section>
-    </main>
-    <footer>
-        <!-- Task: Implement a footer with your name and the year -->
-    </footer>
-    <script src="app.js"></script>
+     <!-- HTML content here -->
+     <div class="container">
+        <input type="text" id="ingredientInput" placeholder="Enter ingredients...">
+        <button id="searchButton">Search</button>
+        <div id="resultsContainer"></div>
+    </div>
+
+
+
+
+
+
+    <script src="./app.js"></script>
 </body>
 </html>
